--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+body{
+    margin: 0;
+    font-family: Tahoma;
+}
+
+
 h1{
     font-size: 50px;
     font-family: Tahoma;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+   color: dimgray; 
+}
+.blue-highlight{
     color: aqua;
 }
 .half-width{
@@ -13,4 +25,50 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightblue,blue);
+    padding: 10px 20px ;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+  background-image: url("images/dream-bg.png"); 
+  background-repeat: no-repeat; 
+  background-position: right;
+}
+.singel-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightSalmon,tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+ border-left: 7px solid;
+ border-image: linear-gradient(180deg, blue,cyan);
+   border-image-slice: 1; 
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
 }
